# clipboard-cleanse

./: .gitignore  Cargo.toml  MacOS.md  README.md  Windows.md  build.rs
.github/workflows/: checks.yml
bundling/macos/: Info.plist  bundle.sh
bundling/windows/: resources.rc
src/: config.rs  logger.rs  main.rs  sanitization.rs
src/macos/: app_delegate.rs  config.rs  main.rs  mod.rs  ui.rs  utils.rs
src/macos/appkit/: mod.rs  ns_application.rs  ns_button.rs  ns_data.rs  ns_error.rs  ns_file_manager.rs  ns_image.rs  ns_menu.rs  ns_pasteboard.rs  ns_size.rs  ns_status_bar.rs  ns_url.rs
src/macos/service_management/: mod.rs  sm_app_service.rs
src/windows/: clipboard.rs  clipboard_listener.rs  config.rs  ctrlc_handler.rs  main.rs  menu.rs  mod.rs  resources.rs  shell_link.rs  system_tray.rs  win_utils.rs  window.rs  wm_command.rs  wm_user.rs
