[package]
name = "clipboard_cleanse"
version = "0.1.2"
edition = "2021"
publish = false

[dependencies]
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
toml = "0.8.19"
url = "2.5.4"

[profile.release]
lto = true
strip = true
opt-level = 3

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.59.0", features = ["Win32_System_DataExchange", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi", "Win32_System_LibraryLoader", "Win32_System_Memory", "Win32_UI_Shell", "Win32_System_Console", "Win32_System_Com"] }
windows-result = "0.3.0"
rand = "0.8.5"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.5.2", features = ["exception"] }
objc2-foundation = { version = "0.2.2", features = ["NSString", "NSObject", "NSNotification", "NSZone", "NSThread"] }
